--- a/src/components/ItemBtn/itembtn.module.scss
+++ b/src/components/ItemBtn/itembtn.module.scss
@@ -7,6 +7,7 @@
   align-items: center;
   justify-content: space-around;
   transition: 200ms linear;
+  margin-bottom: 10px;
   &:hover{
     transition: 200ms linear;
     border: 1px solid #88cce4;
