--- a/src/components/AccordionItem/accordionitem.module.scss
+++ b/src/components/AccordionItem/accordionitem.module.scss
@@ -1,5 +1,16 @@
-.btnsBlock{
+.block{
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: start;
+  gap: 5%;
+  .btnsBlock{
     display: flex;
     flex-wrap: wrap;
     gap: 1%;
   }
+  .actionBtns{
+    display: flex;
+    justify-content: space-around;
+  }
+}
