--- a/src/components/CheckedList/checkedlist.module.scss
+++ b/src/components/CheckedList/checkedlist.module.scss
@@ -1,9 +1,10 @@
 .block{
-  width: 35%;
+  width: 100%;
   margin: 0%;
+  padding: 0% 5% 0% 7%;
   display: flex;
   flex-direction: column;
-  list-style: none;
+  list-style: pointer;
   li{
     animation: entering 200ms linear;
     cursor: pointer;
